feat: add CellViewBinding + refactor ExcelManager

--- a/MailCreator.csproj
+++ b/MailCreator.csproj
@@ -72,6 +72,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="App_Code\Excel\ExcelManager.cs" />
+    <Compile Include="App_Code\Excel\UI\CellViewBinding.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
