feat: add new exel external part to parse personal calendar data

--- a/MailCreator.csproj
+++ b/MailCreator.csproj
@@ -72,7 +72,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="App_Code\ExcelPart\Data\Promos.cs" />
+    <Compile Include="App_Code\ExcelPart\UI\MatiereViewBinding.cs" />
+    <Compile Include="App_Code\ExcelPart\UI\WeekViewBinding.cs" />
     <Compile Include="App_Code\Excel\ExcelManager.cs" />
+    <Compile Include="App_Code\ExcelPart\ExcelWeekParser.cs" />
     <Compile Include="App_Code\Excel\UI\CellViewBinding.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -106,5 +110,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
