feat: add office app_code

--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,5 @@
   <package id="DocumentFormat.OpenXml" version="2.19.0" targetFramework="net48" />
   <package id="Extended.Wpf.Toolkit" version="4.5.0" targetFramework="net48" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net48" />
+  <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1004" targetFramework="net48" />
 </packages>
