--- a/packages.config
+++ b/packages.config
@@ -4,4 +4,5 @@
   <package id="Extended.Wpf.Toolkit" version="4.5.0" targetFramework="net48" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net48" />
   <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1004" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
 </packages>
