--- a/packages.config
+++ b/packages.config
@@ -5,4 +5,11 @@
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net48" />
   <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1004" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="xunit" version="2.4.0" targetFramework="net48" />
+  <package id="xunit.abstractions" version="2.0.2" targetFramework="net48" />
+  <package id="xunit.analyzers" version="0.10.0" targetFramework="net48" />
+  <package id="xunit.assert" version="2.4.0" targetFramework="net48" />
+  <package id="xunit.core" version="2.4.0" targetFramework="net48" />
+  <package id="xunit.extensibility.core" version="2.4.0" targetFramework="net48" />
+  <package id="xunit.extensibility.execution" version="2.4.0" targetFramework="net48" />
 </packages>
