--- a/packages.config
+++ b/packages.config
@@ -12,4 +12,5 @@
   <package id="xunit.core" version="2.4.0" targetFramework="net48" />
   <package id="xunit.extensibility.core" version="2.4.0" targetFramework="net48" />
   <package id="xunit.extensibility.execution" version="2.4.0" targetFramework="net48" />
+  <package id="xunit.runner.visualstudio" version="2.4.0" targetFramework="net48" developmentDependency="true" />
 </packages>
