--- a/MailCreator.csproj
+++ b/MailCreator.csproj
@@ -109,7 +109,10 @@
     <Compile Include="App_Code\Json\JsonFileUtils.cs" />
     <Compile Include="App_Code\Office\Data\Mail.cs" />
     <Compile Include="App_Code\Office\Office.cs" />
-    <Compile Include="App_Code\Utils\PopupExtensions.cs" />
+    <Compile Include="App_Code\Popups\Enums\PopupTime.cs" />
+    <Compile Include="App_Code\Popups\Enums\PopupType.cs" />
+    <Compile Include="App_Code\Popups\PopupValue.cs" />
+    <Compile Include="App_Code\Popups\PopupValues.cs" />
     <Compile Include="App_Code\Utils\StringExtensions.cs" />
     <Compile Include="App_Code\Utils\WindowExtensions.cs" />
     <Compile Include="Windows\HomeWindow.xaml.cs">
