feat: add uc mail data

--- a/MailCreator.csproj
+++ b/MailCreator.csproj
@@ -115,6 +115,9 @@
     <Compile Include="App_Code\Popups\PopupValues.cs" />
     <Compile Include="App_Code\Utils\StringExtensions.cs" />
     <Compile Include="App_Code\Utils\WindowExtensions.cs" />
+    <Compile Include="UserControls\ucMailData.xaml.cs">
+      <DependentUpon>ucMailData.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\HomeWindow.xaml.cs">
       <DependentUpon>HomeWindow.xaml</DependentUpon>
     </Compile>
@@ -156,6 +159,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="UserControls\ucMailData.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\HomeWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
