--- a/MailCreator.csproj
+++ b/MailCreator.csproj
@@ -105,6 +105,8 @@
     </ApplicationDefinition>
     <Compile Include="App_Code\DataView\Email.cs" />
     <Compile Include="App_Code\DataView\EmailProperty.cs" />
+    <Compile Include="App_Code\DataView\Entries\PropertyDatas.cs" />
+    <Compile Include="App_Code\DataView\PropertyData.cs" />
     <Compile Include="App_Code\DataView\Relance.cs" />
     <Compile Include="App_Code\ExcelPart\ExcelProfesseurParser.cs" />
     <Compile Include="App_Code\DataView\Professeur.cs" />
