--- a/packages.config
+++ b/packages.config
@@ -2,9 +2,31 @@
 <packages>
   <package id="DocumentFormat.OpenXml" version="2.19.0" targetFramework="net48" />
   <package id="Extended.Wpf.Toolkit" version="4.5.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.Build" version="17.5.0" targetFramework="net48" />
+  <package id="Microsoft.Build.Framework" version="17.5.0" targetFramework="net48" />
+  <package id="Microsoft.Build.Utilities.Core" version="17.5.0" targetFramework="net48" />
+  <package id="Microsoft.IO.Redist" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.NET.StringTools" version="17.5.0" targetFramework="net48" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net48" />
   <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1004" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net48" />
+  <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="6.0.0" targetFramework="net48" />
+  <package id="System.Reflection.MetadataLoadContext" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="7.0.2" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Dataflow" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="xunit" version="2.4.0" targetFramework="net48" />
   <package id="xunit.abstractions" version="2.0.2" targetFramework="net48" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net48" />
